--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm">
-                        <a href="projects/alemany-farm.html">
+                        <a href="projects/berkeley-student-food-collective.html">
                             <img class="card-img" src="assets/img/berkeley-food-icon.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);"
                             alt="Berkeley Student Food Collective">
                         </a>
