--- a/projects/groupsource.html
+++ b/projects/groupsource.html
@@ -159,62 +159,30 @@
                                 <div class="col text-center">
                                     <p>Isabella Dyc-O'Neal</p>
                                     <p>Project Lead</p>  
-                                    <p>Senior, Cognitive Science</p>
+                                    <p>Cognitive Science</p>
                                 </div>
                                 <div class="col text-center">
                                     <p>Abhinav Subramaniam</p>
                                     <p>Business Strategy Developer</p>  
-                                    <p>Freshman, Mechanical Engineering</p>
+                                    <p>Mechanical Engineering</p>
                                 </div>
                                 <div class="col text-center">
                                     <p>Laurel Nelson</p>
                                     <p>Business Strategy Developer</p>  
-                                    <p>Senior, Bioengineering</p>
+                                    <p>Bioengineering</p>
                                 </div>
                                 <div class="col text-center">
                                     <p>Leo Gamboa</p>
                                     <p>Business Strategy Developer</p>  
-                                    <p>Sophomore, MCB & Political Science</p>
+                                    <p>MCB & Political Science</p>
                                 </div>
                                 <div class="col text-center">
                                     <p>Maya Chen</p>
                                     <p>User Interface Designer</p>  
-                                    <p>Junior, Cognitive Science</p>
+                                    <p>Cognitive Science</p>
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="team-container">
-                            <div class="member">
-                                <img src="../assets/img/groupsource/icons/isabella.svg" alt="Isabella" />
-                                <p>Isabella Dyc-O'Neal</p>
-                                <p>Project Lead</p>  
-                                <p>Senior, Cognitive Science</p>
-                            </div>
-                            <div class="member">
-                                <img src="../assets/img/groupsource/icons/abhi.svg" alt="Abhinav" />
-                                <p>Abhinav Subramaniam</p>
-                                <p>Business Strategy Developer</p>  
-                                <p>Freshman, Mechanical Engineering</p>
-                            </div>
-                            <div class="member">
-                                <img src="../assets/img/groupsource/icons/laurel.svg" alt="Laurel" />
-                                <p>Laurel Nelson</p>
-                                <p>Business Strategy Developer</p>  
-                                <p>Senior, Bioengineering</p>
-                            </div>
-                            <div class="member">
-                                <img src="../assets/img/groupsource/icons/leo.svg" alt="Leo" />
-                                <p>Leo Gamboa</p>
-                                <p>Business Strategy Developer</p>  
-                                <p>Sophomore, MCB & Political Science</p>
-                            </div>
-                            <div class="member">
-                                <img src="../assets/img/groupsource/icons/maya.svg" alt="Maya" />
-                                <p>Maya Chen</p>
-                                <p>User Interface Designer</p>  
-                                <p>Junior, Cognitive Science</p>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
             </div>
@@ -377,7 +345,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="prototype-header">strategy team</h3>
+                        id="strategy-team-header">strategy team</h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <h4>About</h4>
@@ -446,7 +414,7 @@
                             individual BPFCs before integrating all of them into
                             one centralized BPFCs as shown below
                         </p>
-                        <p><strong>web team: insert BPFCS (excel) here!!!!</strong></p>
+                        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQVmXS3BN1qMPKthOTfuTbqRnDd1YC_34J6lCop_cn9chmfl9tp757UX-fa22xayQ/pubhtml?gid=1056765694&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
                         <p>
                             The Above BPFCs runs on a project that lasts 10 weeks. In the "Pre-Project" stage, the three important aspects included:
                         </p>
@@ -490,7 +458,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="test-header">user interface team</h3>
+                        id="ui-team-header">user interface team</h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <h4>About</h4>
@@ -605,7 +573,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="solution-header">test</h3>
+                        id="test-header">test</h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <h4>Initial usability test</h4>
@@ -731,7 +699,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="next-steps-header">thank you's</h3>
+                        id="thank-you-header">thank you's</h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <p>
