added underlines and up to background for makerspace

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         </a>
                     </div>
                     <div class="col-sm">
-                        <a href="projects/alemany-farm.html">
+                        <a href="projects/makerspace.html">
                             <img class="card-img" src="assets/img/makerspace-icon.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                         </a>
                     </div>
