--- a/projects/groupsource.html
+++ b/projects/groupsource.html
@@ -134,7 +134,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="team-header">team</h3>
+                        id="team-header"><u style="border-bottom: 10px solid #99CCFF;">team</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <div class="team-container">
@@ -224,7 +224,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="background-header">background</h3>
+                        id="background-header"><u style="border-bottom: 10px solid #E06B65;">define</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <p>
@@ -276,7 +276,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="empathize-header">empathize</h3>
+                        id="empathize-header"><u style="border-bottom: 10px solid #FFFF99;">empathize</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <h4>User interviews</h4>
@@ -308,7 +308,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="define-header">define</h3>
+                        id="define-header"><u style="border-bottom: 10px solid #99CC99;">define</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <h4>Interview Key Findings</h4>
@@ -336,7 +336,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="ideate-header">ideate</h3>
+                        id="ideate-header"><u style="border-bottom: 10px solid #99CCFF;">ideate</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <h4>Interview Key Findings</h4>
@@ -377,7 +377,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="prototype-header">strategy team</h3>
+                        id="prototype-header"><u style="border-bottom: 10px solid #E06B65;">strategy team</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <h4>About</h4>
@@ -490,7 +490,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="test-header">user interface team</h3>
+                        id="test-header"><u style="border-bottom: 10px solid #FFFF99;">user interface team</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <h4>About</h4>
@@ -605,7 +605,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="solution-header">test</h3>
+                        id="solution-header"><u style="border-bottom: 10px solid #99CC99;">test</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <h4>Initial usability test</h4>
@@ -623,7 +623,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="solution-header">solution</h3>
+                        id="solution-header"><u style="border-bottom: 10px solid #99CCFF;">solution</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <h4>UI Team</h4>
@@ -692,7 +692,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="next-steps-header">next steps</h3>
+                        id="next-steps-header"><u style="border-bottom: 10px solid #E06B65;">next steps</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <p>
@@ -731,7 +731,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="next-steps-header">thank you's</h3>
+                        id="next-steps-header"><u style="border-bottom: 10px solid #FFFF99;">thank you</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <p>
