makerspace define done

--- a/projects/makerspace.html
+++ b/projects/makerspace.html
@@ -196,21 +196,21 @@
                         </p>
                         <div class="row">
                             <div class="col-8">
-                                <img src="../assets/img/makerspace/define/currmoff0.png">
+                                <img src="../assets/img/makerspace/background/currmoff0.png">
                                 <figcaption style="font-size: x-small;">Current Moffit Makerspace (1/3) <a href="https://twitter.com/UCBerkeleyLib/status/1174747221331365888/photo/3">(photo source)</a> </figcaption>
                             </div>
                             <div class="col-4">
-                                <img src="../assets/img/makerspace/define/currmoff.png">
+                                <img src="../assets/img/makerspace/background/currmoff.png">
                                 <figcaption style="font-size: x-small;">Current Moffit Makerspace (2/3)</figcaption>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-8">
-                                <img src="../assets/img/makerspace/define/newmoff.png">
+                                <img src="../assets/img/makerspace/background/newmoff.png">
                                 <figcaption style="font-size: x-small;">Proposed Plan for CCL, visit the CCL website <a href="https://give.lib.berkeley.edu/ccl" style="text-decoration: underline;">here</a></figcaption>
                             </div>
                             <div class="col-4">
-                                <img src="../assets/img/makerspace/define/currmoff2.png">
+                                <img src="../assets/img/makerspace/background/currmoff2.png">
                                 <figcaption style="font-size: x-small;">Current Moffit Makerspace (3/3)</figcaption>
                             </div>
                         </div>
@@ -223,12 +223,10 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="empathize-header"><u style="border-bottom: 10px solid #FFFF99;">empathize</u></h3>
+                        id="empathize-header"><u style="border-bottom: 10px solid #FFFF99;">timeline</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
-                        <p>
-                            In the first week, we visited the Moffitt Makerspace in person individually. We noted down our initial thoughts on the space and tried to identify key features. We noted that there are some problematic qualities of the space that we could address. 
-                        </p>
+                            <img src="../assets/img/makerspace/background/timeline.svg">
                     </div>
                 </div>
             </div>
@@ -241,20 +239,17 @@
                         id="define-header"><u style="border-bottom: 10px solid #99CC99;">define</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
-                        <h4>Interview Key Findings</h4>
                         <p>
-                            After we conducted our interviews, we discussed each
-                            of our key insights and identified common problems
-                            and findings. We found several prominent insights
-                            that we kept in mind when ideating and creating our
-                            groupsource platform.
+                            In the first week, we visited the Moffitt Makerspace in person individually. We noted down our initial thoughts on the space and tried to identify key features. We noted that there are some problematic qualities of the space that we could address. 
                         </p>
-                        <h4>User Personas</h4>
                         <p>
-                            Using the insights from our interviews we created 2
-                            user personas to help us identify the needs of our
-                            target users.
+                            After listing out our observations, we categorized the problems and defined three major pain points: 
                         </p>
+                        <img src="../assets/img/makerspace/define/ideation.svg">
+                        <p style="padding-top: 5%;">Based on common questions that students encounter and our personal experiences, we listed three main “How might we” questions.</p>
+                        <p>1. How might we give the Moffitt Makerspace an identity?</p>
+                        <p>2. How might we increase students’ engagement of the Makerspace and of the workshops?</p>
+                        <p>3. How might we maintain a balance between facilitating the function of the space and ensuring the creative freedom?</p>
                     </div>
                 </div>
             </div>
