makerspace ideate done

--- a/projects/makerspace.html
+++ b/projects/makerspace.html
@@ -262,35 +262,35 @@
                         id="ideate-header"><u style="border-bottom: 10px solid #99CCFF;">ideate</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
-                        <h4>Interview Key Findings</h4>
                         <p>
-                            In our initial meetings, the team and mentors hosted
-                            a brainstorming session where we outlined important
-                            platform features and a basic user flow. This
-                            defined platform "skeleton" acted as a guiding
-                            pillar as the strategy and user interface teams
-                            moved forward in development. 
+                            After defining the problem we wanted to tackle, an ideating session was held with all team members and mentors at the Makerspace. The process included idea regurgitation onto sticky notes by everyone, followed by arranging these ideas into different categories of potential solutions we want to pursue.
                         </p>
-                        <p>
-                            We mapped out are ideas on a whiteboard so that we could easily visualize and elaborate on our ideas. 
+                        <p>These categories included:</p>
+                        <p style="text-indent: 30px;">
+                            1. <strong>Wayfinding </strong>(improving ease of locating the makerspace, as well as increasing visibility)
                         </p>
-                        <p><strong>Key features we developed were:</strong></p>
-                        <ol>
-                            <li>Establish student credibility</li>
-                            <li>Project preference forms</li>
-                            <li>Ways to discover projects </li>
-                            <li>A project filtering system</li>
-                        </ol>
-                        <p><strong>Our basic user flow:</strong></p>
-                        <p>general home→user log in→form to fill out basic
-                        info→home page while logged in→a way to look for
-                        projects→find project of interest→fill out specific
-                        questionnaire→get project→connect to project mentor </p>
-                        <p>Our brainstorming session results:</p>
-                        <figure>
-                            <img src="../assets/img/groupsource/Ideate/IMG_4159.jpg" alt="Brainstorming Session Results" />
-                            <figcaption>Our first iteration of the key features and basic user flow of Groupsource!</figcaption>
-                        </figure>
+                        <p style="text-indent: 30px;">
+                            2. <strong>Outreach </strong>(pursuing partnerships with other makerspaces and groups)
+                        </p> 
+                        <p style="text-indent: 30px;">
+                            3. <strong>Physical Remodeling </strong>(addressing issues concerning layout and workflow of the Makerspace
+                        </p>    
+                        <p style="text-indent: 30px;">
+                            4. <strong>Brand Identity </strong>(creating fliers, a map for the wall on floor 1 of Moffitt, and a brand identity)
+                        </p>     
+                        <p style="text-indent: 30px;">
+                            5. <strong>Research </strong>(conducting interviews with users, makerspace experts, and other makerspaces)
+                        </p>
+                        <div class="row">
+                            <div class="col-4">
+                                <img src="../assets/img/makerspace/define/ideationsesh.png">
+                                <figcaption style="font-size: small; font-style: italic;">Post-its and whiteboard from our ideating session</figcaption>
+                            </div>   
+                            <div class="col-8">
+                                <p>Although we valued multi-facted approach, attempting to address all of these elements would prove to decrease the depth and quality of work overall. Thus, the team, along with the mentors voted for their top two categories, resulting in outreach, brand identity, and research receiving the most votes.</p>
+                                <p>Sadly, the COVID-19 pandemic hit midway through the semester, obstructing our ability to interact with students or even access campus facilities (i.e. the Makerspace). Thus,  conducting in-person interviews or using the vinyl cutter to print a map for the wall on Moffitt’s 1st floor were no longer feasible. Thus, the team shifted the project to still tackle these problems as best as we could. The map and brand designs would be created digitally, research procedures would be developed, and outreach leads would be collected, all handed to the project mentors as a guide for late use.</p>
+                            </div>  
+                        </div>                                             
                     </div>
                 </div>
             </div>
