makerspace prototype done

--- a/projects/makerspace.html
+++ b/projects/makerspace.html
@@ -300,17 +300,13 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="solution-header"><u style="border-bottom: 10px solid #99CCFF;">test</u></h3>
+                        id="solution-header"><u style="border-bottom: 10px solid #E06B65;">prototype</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
-                        <h4>Initial usability test</h4>
-                        <img src="../assets/img/groupsource/UI Team/usability test/Usability test-pt1.png" alt="Usability Test 1" />
-                        <img src="../assets/img/groupsource/UI Team/usability test/Usability test-pt2.png" alt="Usability Test 2" />
-                        <h4>User feedback</h4>
-                        <img src="../assets/img/groupsource/UI Team/usability test/User Testing 1.png" alt="User Feedback 1" />
-                        <img src="../assets/img/groupsource/UI Team/usability test/User Testing 2.png" alt="User Feedback 2" />
+                        <p>Based on our previous ideating sessions, we began ideating on several versions of signage and marketing deliverables for outreach. See below our progression from first drafts to final products. We first began with a solidified color theory. It was important to be for us in our work to be consistent in themes. As well, we wanted worked with the purple walls of Moffitt Library Floor 1 should the large-scale map be implemented on the wall. We applied a combination of our team’s suggestions into our prototypes and deliverables. </p>
                     </div>
                 </div>
+                <img src="../assets/img/makerspace/Group 18.png" style="padding-bottom: 30px;">
             </div>
         </div>
         <div class="overview-container">
