makerspace test done

--- a/projects/makerspace.html
+++ b/projects/makerspace.html
@@ -306,7 +306,7 @@
                         <p>Based on our previous ideating sessions, we began ideating on several versions of signage and marketing deliverables for outreach. See below our progression from first drafts to final products. We first began with a solidified color theory. It was important to be for us in our work to be consistent in themes. As well, we wanted worked with the purple walls of Moffitt Library Floor 1 should the large-scale map be implemented on the wall. We applied a combination of our team’s suggestions into our prototypes and deliverables. </p>
                     </div>
                 </div>
-                <img src="../assets/img/makerspace/Group 18.png" style="padding-bottom: 30px;">
+                <img src="../assets/img/makerspace/prototype/Group 18.png" style="padding-bottom: 30px;">
             </div>
         </div>
         <div class="overview-container">
@@ -314,66 +314,16 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="solution-header"><u style="border-bottom: 10px solid #E06B65;">solution</u></h3>
+                        id="solution-header"><u style="border-bottom: 10px solid #FFFF99;">test</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
-                        <h4>UI Team</h4>
                         <p>
-                            We can break the functionalities into 3 parts: searching
-                            for projects, creating an account, and organizing your
-                            profile and saved projects within your dashboard.
+                            Following initial prototyping and the establishment of a clear and cohesive theme and color palette for the 
+                            graphics, low-fidelity iterations of the final deliverables were created using Illustrator. During the following 
+                            meetings, the designs were shared with the entire team for feedback. Team members gave their suggestions 
+                            on all of the graphics, and iterations and improvements were then built around those suggestions. 
                         </p>
-                        <p><strong>Searching for projects</strong></p>
-                        <p>
-                            Users can explore projects by filtering by area of
-                            study, time span, industry, etc. Users can save projects
-                            they like, which will then be stored in their dashboard.
-                        </p>
-                        <iframe src="https://giphy.com/embed/f3GSwYDbodSPkSetWI"
-                        width="480" height="340" frameBorder="0" class="giphy-embed"
-                        allowFullScreen></iframe><p><a
-                        href="https://giphy.com/gifs/f3GSwYDbodSPkSetWI">via
-                        GIPHY</a></p>
-                        <p><strong>Creating an account</strong></p>
-                        <p>
-                            In order to save a project, user's must create an
-                            account. We collaborated with the strategy team to
-                            identify the key information we would want from
-                            students.
-                        </p>
-                        <iframe src="https://giphy.com/embed/Z9hxcg8p1ow5rSs9fB"
-                        width="480" height="342" frameBorder="0"
-                        class="giphy-embed" allowFullScreen></iframe><p><a
-                        href="https://giphy.com/gifs/Z9hxcg8p1ow5rSs9fB">via
-                        GIPHY</a></p>
-                        <h4>Dashboard</h4>
-                        <p>
-                            Once a user creates an account, they gain a
-                            dashboard. The dashboard includes a profile to
-                            organize past experiences and skills, a place to see
-                            saved projects and choose which to apply to, and a
-                            place to store ongoing projects. Students can only
-                            apply to projects from their saved project list and
-                            are allowed to apply up to 5 projects at a time. We
-                            set these restrictions to  differentiate our
-                            platform from other job sites and to enforce
-                            students to make more conscious choices when
-                            applying to projects. Our hope is to have students
-                            only apply to projects they feel passionate about.
-                        </p>
-                        <iframe src="https://giphy.com/embed/M9f1cAXCRSkCVyTUIh"
-                        width="480" height="344" frameBorder="0"
-                        class="giphy-embed" allowFullScreen></iframe><p><a
-                        href="https://giphy.com/gifs/M9f1cAXCRSkCVyTUIh">via
-                        GIPHY</a></p>
-                        <p><strong>Figma prototype</strong></p>
-                        <iframe style="border: none;" width="800" height="450"
-                        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FE3LGulR3fTWcmsPiNsIzpG%2Fgroupsource%3Fnode-id%3D432%253A59%26scaling%3Dscale-down"
-                        allowfullscreen></iframe>
-                        <p><strong>Design Guide</strong></p>
-                        <img src="../assets/img/groupsource/Solution/design guide.png" alt="Design Guide" />
-                        <h4>Strategy Team</h4>
-                        <p><strong>web team: pitch deck format of main deliverables: project proposal, email template, business flow</strong></p>
+                        <img src="../assets/img/makerspace/test/Group 19.png">
                     </div>
                 </div>
             </div>
