first pass at makerspace done

--- a/projects/makerspace.html
+++ b/projects/makerspace.html
@@ -333,36 +333,17 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="next-steps-header">next steps</h3>
+                        id="next-steps-header"><u style="border-bottom: 10px solid #99CC99;">reflection & next steps</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <p>
-                            The team had a wonderful time collaborating with
-                            Groupsource and its founders on this project.
-                            Because the project was at the early stages of
-                            development, we were able to play a large role in
-                            taking Groupsource from an idea to a prototyped
-                            platform. While performing user interviews,
-                            solidifying platform features and goals, and
-                            iterating through user interface prototypes; team
-                            members had the opportunities to grow individually
-                            through their contributions and make a lasting
-                            impact on a promising company. Team members learned
-                            Figma skills, business strategy techniques,
-                            successful interview structures and creative
-                            thinking. We look forward to seeing Groupsource
-                            interface with a new generation of learners.
+                            Due to the COVID-19 Pandemic, a large part of our teams ability to empathize with users of the space was derailed. We would have liked to conduct interviews with designers at other Makerspaces, attend workshops at the Moffitt Makerspace, and speak with the students using this space to best guide the design changes we arrived at. In an effort to adapt to the circumstances surrounding the pandemic we instead provided procedural guidance to our mentors on how to carry out this crucial step of understanding the user.
                         </p>
                         <p>
-                            Moving forwards, we hope to publish a Groupsource
-                            landing page and ultimately an official website
-                            using the Figma prototype we created. In tandem, we
-                            will also be coordinating the pilot program by
-                            solidifying the list of mentors and students that
-                            will participate. With development comes lots of
-                            user testing. In the beginning we plan on actively
-                            adapting the platform given feedback and testing. 
+                            Moving forward, the guide will be handed off to the mentors for future use alongside the redesigning of this space. The intent is for the mentors to utilize the guide for conducting interviews with current and potential users of the makerspace, as well as creators of other makerspaces. Furthermore, the guide outlines outreach opportunities with student groups, UC Berkeley Deparments, and other Makerspaces  to create a network and community of designers on the UC Berkeley campus. The guide will also be a long-term  resource during the redesigning of the Makerspace and of Moffitt Library’s first 3 floors in the next 2-3 years.
                         </p>
+                        <p>Below are words of reflection from each of the team members and mentors on this project:</p>
+                        <img src="../assets/img/makerspace/reflection/Group 20 (1).png">
                     </div>
                 </div>
             </div>
@@ -372,23 +353,12 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="next-steps-header"><u style="border-bottom: 10px solid #FFFF99;">thank you</u></h3>
+                        id="next-steps-header"><u style="border-bottom: 10px solid #99CCFF;">thank you</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
+                        <img src="../assets/img/makerspace/thanks/Group 21.png" style="padding-bottom: 25px;">
                         <p>
-                            We would like to thank our Mentors James and Riley
-                            for giving being great mentors to work with! We
-                            really appreciated your involvement and guidance.
-                        </p>
-                        <p>
-                            We would like to thank Courtnie for being so helpful
-                            in giving advice for ideas and directionality within
-                            our project.
-                        </p>
-                        <p>
-                            Lastly, we would like to thank ICB for giving us
-                            this opportunity and being a wonderful support
-                            system!
+                            Thank you to our wonderful mentors Nicole and Annalise, who have been so present and supportive from our very first ideating session to the final edits of our deliverables, including the Moffitt Makerspace Guide. You both have offered so much insight and guidance as to how we would approach such a broad issue on campus with tangible solutions. As well, thank you for extending this oppurtunity to us, as designers on campus, to reimagine a unique space within the UC Berkeley community. In such trying and confusing times, we could not have been more grateful to have worked on this project under your guidance. We truly hope that our shared efforts can assist your work in establishing and sustaining an creative crommunity for all. 
                         </p>
                     </div>
                 </div>
