finished groupsource. made pg responsive except team icons

--- a/projects/berkeley-student-food-collective.html
+++ b/projects/berkeley-student-food-collective.html
@@ -189,7 +189,7 @@
                         training youth to work in and manage a sustainable
                         business.”
                     </p>
-                    <img class="bsfc-img smaller-img center-img" src="../assets/img/bsfc/BSFC Logo Square.png" alt="BSFC Logo" />
+                    <img class="bsfc-img sm-img center-img" src="../assets/img/bsfc/BSFC Logo Square.png" alt="BSFC Logo" />
                     <img class="bsfc-img" src="../assets/img/bsfc/bsfc-article1.png" alt="Article Screenshot 1" />
                     <img class="bsfc-img" src="../assets/img/bsfc/bsfc-article2.png" alt="Article Screenshot 2" />
                     <img class="bsfc-img" src="../assets/img/bsfc/bsfc-team.png" alt="BSFC Team" />
