alemany farm is done

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="container">
                 <div class="row">
                   <div class="col-sm">
-                    <a href="projects/alemany-farm.html">
+                    <a href="projects/alemany-farms.html">
                         <img src="assets/img/alemany farm rect.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);" alt="Alemany Farm">
                     </a>
                   </div>
@@ -90,7 +90,7 @@
                     </a>
                   </div>
                   <div class="col-sm">
-                    <a href="projects/alemany-farm.html">
+                    <a href="projects/netic.html">
                         <img src="assets/img/neomotion rect.svg" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                     </a>
                   </div>
@@ -114,13 +114,13 @@
                     </div>
                 </div>
               </div>
-            
+
         </div>
     </section>
 
     <!-- Art Piece Section -->
     <section id="members">
-        
+
         <div class="container">
             <h2>Colors of ICB</h2>
             <div class="labels left">
